syntax = "proto3";


option java_package = "ar.edu.itba.pod.grpc.checkin";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "commons/error.proto";
import "commons/range.proto";

package checkin;

service CheckInService{
 rpc CheckInRangeQuery(CheckInRangeRequest) returns (CheckInRangeResponse);//12
 rpc PassengerCheckIn(PassengerCheckInRequest) returns (PassengerCheckInResponse); // 13,2,10,14,18,3
 rpc PassengerStatus(PassengerRequest) returns (PassengerResponse); //12, 15
}

message CheckInRangeRequest{
 string booking = 1;
}

message CheckInRangeResponse{
 string flight = 1;
 string airline = 2;
 optional AssignedRange assignedRange = 3;
}

message AssignedRange{
 RangeMessage range = 3;
 string sector = 4;
 int32 waitingCount = 5;
}

message PassengerRequest{
 string booking = 1;
}

message RangeWaitingInfo{
 RangeMessage range = 1;
 int32 waitingPassenger = 2;
}


message PassengerResponse{
 string flight = 2;
 string airline = 3;
 string sector = 5;
 oneof counterInfo{
  int32 counter = 6;
  RangeMessage range = 7;
  RangeWaitingInfo waiting = 8;
 }
}

message PassengerCheckInRequest{
  string booking = 1;
  string sector = 2;
  int32 counterFrom = 3;
}

message PassengerCheckInResponse{
 RangeMessage range = 3;
 int32 peopleInLine = 4;
 string airline = 5;
 string flight = 6;
}
