syntax = "proto3";

option java_package = "ar.edu.itba.pod.grpc.commons";
option java_multiple_files = true;

message RangeMessage{
  int32 start = 1;
  int32 end = 2;
}